--- a/app/index.html
+++ b/app/index.html
@@ -1,3 +1,3 @@
 echo "<h1> Hello ngay 27 _ devops </h1>"
-echo "<p>Updated at $(date)</p>" >> ~/Day27_Build_Deploy/app/index.html
 
+<p>Updated at Mon Dec  1 09:23:58 AM UTC 2025</p>
